# pwatch

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml  lint.yml
examples/: watch_target.rs
src/: main.rs  perf.rs
src/arch/: aarch64.rs  mod.rs  x86.rs
