[package]
name = "pwatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.4.18", features = ["derive"] }
nix = { version = "0.27", features = ["mman", "poll"] }
perf-event-open-sys = "4.0"
colored = "2"